:sparkles: Add authorId & createdBy to getArticle
