# docs/swagger.yaml
@@ -184,6 +184,16 @@ paths:
           description: 作者
           schema:
             type: string
+        - name: authorId
+          in: query
+          description: 作者的用户id
+          schema:
+            type: number
+        - name: createdBy
+          in: query
+          description: 发布文章的用户的id
+          schema:
+            type: number
         - name: alias
           in: query
           description: 别名，通常是文章的 URL
@@ -820,7 +830,7 @@ paths:
       tags:
         - users
       summary: 新建用户
-      description: '新增用户的默认用户组为 `student`, 角色为 `reader`'
+      description: "新增用户的默认用户组为 `student`, 角色为 `reader`"
       operationId: addUser
       requestBody:
         $ref: "#/components/requestBodies/addUser"
@@ -1181,8 +1191,7 @@ paths:
         400:
           # TODO: Solve status code conflict
           # $ref: "#/components/responses/BadRequest"
-          description:
-            "TODO: Solve status code conflict. --- Contest not available"
+          description: "TODO: Solve status code conflict. --- Contest not available"
         409:
           description: Team name already exists / User is already in a team
         500:
@@ -1246,8 +1255,7 @@ paths:
         400:
           # TODO: Solve status code conflict
           # $ref: "#/components/responses/BadRequest"
-          description:
-            "TODO: Solve status code conflict. --- Invalid members / Captain is not a member of the team / Contest not available"
+          description: "TODO: Solve status code conflict. --- Invalid members / Captain is not a member of the team / Contest not available"
         401:
           $ref: "#/components/responses/UnauthorizedError"
         404:
@@ -1278,8 +1286,7 @@ paths:
         400:
           # TODO: Solve status code conflict
           # $ref: "#/components/responses/BadRequest"
-          description:
-            "TODO: Solve status code conflict. --- Contest not available"
+          description: "TODO: Solve status code conflict. --- Contest not available"
         401:
           $ref: "#/components/responses/UnauthorizedError"
         404:
@@ -1344,8 +1351,7 @@ paths:
         400:
           # TODO: Solve status code conflict
           # $ref: "#/components/responses/BadRequest"
-          description:
-            "TODO: Solve status code conflict. --- Member does not exist / Contest not available"
+          description: "TODO: Solve status code conflict. --- Member does not exist / Contest not available"
         401:
           $ref: "#/components/responses/UnauthorizedError"
         403:
@@ -1387,8 +1393,7 @@ paths:
         400:
           # TODO: Solve status code conflict
           # $ref: "#/components/responses/BadRequest"
-          description:
-            "TODO: Solve status code conflict. --- Leader cannot be deleted / Contest not available"
+          description: "TODO: Solve status code conflict. --- Leader cannot be deleted / Contest not available"
         401:
           $ref: "#/components/responses/UnauthorizedError"
         404:
@@ -1631,8 +1636,7 @@ paths:
         400:
           # TODO: Solve status code conflict
           # $ref: "#/components/responses/BadRequest"
-          description:
-            "TODO: Solve status code conflict. --- Contest not available"
+          description: "TODO: Solve status code conflict. --- Contest not available"
         401:
           $ref: "#/components/responses/UnauthorizedError"
         500:
@@ -1748,8 +1752,7 @@ paths:
         400:
           # TODO: Solve status code conflict
           # $ref: "#/components/responses/BadRequest"
-          description:
-            "TODO: Solve status code conflict. --- User not in team"
+          description: "TODO: Solve status code conflict. --- User not in team"
         401:
           $ref: "#/components/responses/UnauthorizedError"
         404:
@@ -1787,8 +1790,7 @@ paths:
         400:
           # TODO: Solve status code conflict
           # $ref: "#/components/responses/BadRequest"
-          description:
-            "TODO: Solve status code conflict. --- User not in team"
+          description: "TODO: Solve status code conflict. --- User not in team"
         401:
           $ref: "#/components/responses/UnauthorizedError"
         404:
